--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -12,6 +12,7 @@
       "express": "^4.17.1",
       "graphql": "^14.5.8",
       "jsonwebtoken": "^8.5.1",
+      "merge-graphql-schemas": "^1.7.7",
       "pg": "^7.3.0",
       "reflect-metadata": "^0.1.10",
       "type-graphql": "^0.17.6",
