--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -4,6 +4,7 @@
    "main": "index.js",
    "license": "MIT",
    "dependencies": {
+      "@types/lodash": "^4.14.149",
       "apollo-server-express": "^2.9.14",
       "bcrypt": "^3.0.7",
       "body-parser": "^1.19.0",
@@ -12,6 +13,7 @@
       "express": "^4.17.1",
       "graphql": "^14.5.8",
       "jsonwebtoken": "^8.5.1",
+      "lodash": "^4.17.15",
       "merge-graphql-schemas": "^1.7.7",
       "pg": "^7.3.0",
       "reflect-metadata": "^0.1.10",
