--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@fortawesome/react-fontawesome": "^0.1.7",
     "@material-ui/core": "^4.9.3",
+    "@material-ui/icons": "^4.9.1",
     "core-js": "^3.6.4",
     "dotenv": "^8.2.0",
     "dotenv-webpack": "^1.7.0",
@@ -48,12 +49,12 @@
     "@testing-library/jest-dom": "^4.2.3",
     "@testing-library/react": "^9.1.3",
     "@types/jest": "^24.0.23",
-    "@types/node": "12.7.2",
+    "@types/node": "^13.11.0",
     "@types/react": "^16.9.11",
     "@types/react-dom": "^16.9.0",
     "@types/styled-components": "^4.4.2",
     "@types/webpack": "^4.39.5",
-    "@types/webpack-env": "^1.14.1",
+    "@types/webpack-env": "^1.15.1",
     "@typescript-eslint/eslint-plugin": "^2.1.0",
     "@typescript-eslint/parser": "^2.1.0",
     "babel-eslint": "^10.0.2",
