--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tickiter.manager",
+  "name": "workout.room.frontend",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
