--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "workout.room.frontend",
+  "name": "@workout.room/frontend",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
@@ -11,15 +11,21 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.4.4",
+    "@fullcalendar/core": "^4.4.0",
+    "@fullcalendar/daygrid": "^4.4.0",
+    "@fullcalendar/interaction": "^4.4.0",
+    "@fullcalendar/react": "^4.4.0",
+    "@fullcalendar/timegrid": "^4.4.0",
     "@material-ui/core": "^4.9.3",
     "@material-ui/icons": "^4.9.1",
     "core-js": "^3.6.4",
     "dotenv": "^8.2.0",
     "dotenv-webpack": "^1.7.0",
     "es6-object-assign": "^1.1.0",
+    "moment": "^2.24.0",
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
-    "react-app-polyfill": "^1.0.6",
+    "react-dnd": "^10.0.2",
     "react-dom": "^16.9.0",
     "react-lazy-load-image-component": "^1.4.1",
     "react-router": "^5.0.1",
