--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -52,6 +52,7 @@
     "@types/node": "^13.11.0",
     "@types/react": "^16.9.11",
     "@types/react-dom": "^16.9.0",
+    "@types/react-router": "^5.1.5",
     "@types/styled-components": "^4.4.2",
     "@types/webpack": "^4.39.5",
     "@types/webpack-env": "^1.15.1",
