--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -31,7 +31,8 @@
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "react-select": "^3.0.8",
-    "styled-components": "^5.0.0"
+    "styled-components": "^5.0.0",
+    "vanilla-lazyload": "^15.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.4.4",
