--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -25,6 +25,7 @@
     "moment": "^2.24.0",
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
+    "react-datepicker": "^2.14.1",
     "react-dnd": "^10.0.2",
     "react-dom": "^16.9.0",
     "react-lazy-load-image-component": "^1.4.1",
