--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -19,6 +19,7 @@
     "@material-ui/core": "^4.9.3",
     "@material-ui/icons": "^4.9.1",
     "core-js": "^3.6.4",
+    "date-fns": "^2.12.0",
     "dotenv": "^8.2.0",
     "dotenv-webpack": "^1.7.0",
     "es6-object-assign": "^1.1.0",
