--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -4,7 +4,6 @@
    "main": "index.js",
    "license": "MIT",
    "dependencies": {
-      "@types/lodash": "^4.14.149",
       "apollo-server-express": "^2.9.14",
       "bcrypt": "^3.0.7",
       "body-parser": "^1.19.0",
@@ -28,7 +27,7 @@
       "@types/graphql": "^14.5.0",
       "@types/jsonwebtoken": "^8.3.5",
       "@types/node": "^8.0.29",
-      "@types/react": "^16.9.17",
+      "cross-env": "^7.0.2",
       "eslint": "^6.0.1",
       "eslint-config-airbnb-base": "^13.2.0",
       "eslint-config-prettier": "^6.0.0",
@@ -42,12 +41,12 @@
       "eslint-plugin-react": "^7.14.3",
       "eslint-plugin-react-hooks": "^2.3.0",
       "eslint-watch": "^6.0.0",
-      "ts-node": "3.3.0",
+      "ts-node": "^8.10.2",
       "typescript": "3.3.3333"
    },
    "scripts": {
-      "start": "nodemon src/index.ts",
+      "start": "cross-env NODE_ENV=development nodemon --exec ts-node src/index.ts",
       "test": "echo backend test",
-      "build": "tsc -b"
+      "build": "rimraf ./dist && tsc"
    }
 }
