--- a/packages/backend/ormconfig.docker.json
+++ b/packages/backend/ormconfig.docker.json
@@ -1,6 +1,6 @@
 {
   "type": "postgres",
-  "host": "postgres",
+  "host": "database",
   "port": 5432,
   "username": "postgres",
   "password": "postgres",
