--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -23,10 +23,10 @@
       "@types/bcrypt": "^3.0.0",
       "@types/cookie-parser": "^1.4.2",
       "@types/dotenv": "^8.2.0",
-      "@types/express": "^4.17.2",
+      "@types/express": "^4.17.6",
       "@types/graphql": "^14.5.0",
-      "@types/jsonwebtoken": "^8.3.5",
-      "@types/node": "^8.0.29",
+      "@types/jsonwebtoken": "^8.5.0",
+      "@types/node": "^14.0.13",
       "cross-env": "^7.0.2",
       "eslint": "^6.0.1",
       "eslint-config-airbnb-base": "^13.2.0",
@@ -41,6 +41,7 @@
       "eslint-plugin-react": "^7.14.3",
       "eslint-plugin-react-hooks": "^2.3.0",
       "eslint-watch": "^6.0.0",
+      "nodemon": "^2.0.4",
       "ts-node": "^8.10.2",
       "typescript": "3.3.3333"
    },
