--- a/packages/backend/tsconfig.json
+++ b/packages/backend/tsconfig.json
@@ -1,18 +1,19 @@
 {
   "compilerOptions": {
-    "target": "es2017",
+    "target": "es6",
     "module": "commonjs",
     "lib": ["dom", "es6", "es2017", "esnext.asynciterable"],
-    "rootDir": ".",
+    "sourceMap": true,
+    "outDir": "dist",
+    "rootDir": "./src",
+    "moduleResolution": "node",
+    "baseUrl": ".",
+    "composite": true,
     "paths": {
-      "src/*": ["./src/*"],
       "entity/*": ["./src/entity/*"],
       "interfaces/*": ["./src/interfaces/*"],
       "modules/*": ["./src/modules/*"]
     },
-    "sourceMap": true,
-    "outDir": "./dist",
-    "moduleResolution": "node",
     "removeComments": true,
     "noImplicitAny": true,
     "strictNullChecks": true,
@@ -23,11 +24,9 @@
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "resolveJsonModule": true,
-    "baseUrl": ".."
+    "skipLibCheck": true
   },
   "exclude": ["node_modules"],
   "include": ["./src/**/*.ts"]
