--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
+  "private": true,
   "scripts": {
     "clean-build": "rimraf build/*",
     "test": "jest --watchAll",
@@ -53,7 +54,7 @@
     "@testing-library/react": "^9.1.3",
     "@types/jest": "^24.0.23",
     "@types/node": "^13.11.0",
-    "@types/react": "^16.9.11",
+    "@types/react": "^16.9.36",
     "@types/react-dom": "^16.9.0",
     "@types/react-router": "^5.1.5",
     "@types/styled-components": "^4.4.2",
