--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "clean-build": "rimraf build/*",
     "test": "jest --watchAll",
-    "start": "webpack-dev-server --progress --overlay --config webpack/dev.babel.js",
+    "start": "webpack-dev-server --progress --overlay --config webpack.dev.js",
     "build": "yarn run clean-build && webpack --mode production --config webpack/prod.babel.js"
   },
   "dependencies": {
@@ -35,7 +35,8 @@
     "react-router-dom": "^5.0.1",
     "react-select": "^3.0.8",
     "styled-components": "^5.0.0",
-    "vanilla-lazyload": "^15.1.1"
+    "vanilla-lazyload": "^15.1.1",
+    "webpack-bundle-analyzer": "^4.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.4.4",
@@ -140,6 +141,7 @@
     "terser-webpack-plugin": "^2.2.2",
     "ts-jest": "^24.1.0",
     "ts-loader": "^6.2.1",
+    "tsconfig-paths-webpack-plugin": "^3.5.1",
     "typescript": "^3.6.2",
     "uglifyjs-webpack-plugin": "^2.1.3",
     "url-loader": "^2.0.1",
