--- a/packages/frontend/tsconfig.json
+++ b/packages/frontend/tsconfig.json
@@ -5,14 +5,15 @@
     "sourceMap": true,
     "baseUrl": "./",
     "paths": {
-      "pages/*": ["./src/pages/*"],
-      "routes/*": ["./src/routes/*"],
-      "hooks/*": ["./src/hooks/*"],
-      "components/*": ["./src/components/*"],
-      "scss/*": ["./src/scss/*"],
-      "img/*": ["./src/img/*"],
-      "utils/*": ["./src/utils/*"],
-      "providers/*": ["./src/providers/*"],
+      "@pages/*": ["./src/pages/*"],
+      "@routes/*": ["./src/routes/*"],
+      "@hooks/*": ["./src/hooks/*"],
+      "@components/*": ["./src/components/*"],
+      "@scss/*": ["./src/scss/*"],
+      "@img/*": ["./src/img/*"],
+      "@helpers/*": ["src/helpers/*"],
+      "@providers/*": ["./src/providers/*"],
+      "@store/*": ["./src/store/*"],
     },
     "target": "es5",
     "declaration": false,
