--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -8,10 +8,10 @@
     "clean-build": "rimraf build/*",
     "test": "jest --watchAll",
     "start": "webpack-dev-server --progress --overlay --config webpack.dev.js",
-    "build": "yarn run clean-build && webpack --mode production --config webpack/prod.babel.js"
+    "build": "yarn run clean-build && webpack --mode production --config webpack/prod.babel.js",
+    "lint": "eslint '*/**/*.{ts,tsx}' --quiet --fix"
   },
   "dependencies": {
-    "@babel/polyfill": "7.4.4",
     "@fullcalendar/core": "4.4.0",
     "@fullcalendar/daygrid": "4.4.0",
     "@fullcalendar/interaction": "4.4.0",
@@ -19,6 +19,7 @@
     "@fullcalendar/timegrid": "4.4.0",
     "@material-ui/core": "4.9.3",
     "@material-ui/icons": "4.9.1",
+    "@reach/router": "^1.3.4",
     "core-js": "3.6.4",
     "date-fns": "2.12.0",
     "dotenv": "8.2.0",
@@ -62,11 +63,10 @@
     "@types/styled-components": "4.4.2",
     "@types/webpack": "4.39.5",
     "@types/webpack-env": "1.15.1",
-    "@typescript-eslint/eslint-plugin": "2.1.0",
-    "@typescript-eslint/parser": "2.1.0",
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "@typescript-eslint/parser": "^4.22.0",
     "autoprefixer": "9.7.6",
     "awesome-typescript-loader": "5.2.1",
-    "babel-eslint": "10.0.2",
     "babel-jest": "24.8.0",
     "babel-loader": "8.0.6",
     "babel-plugin-module-resolver": "3.0.0",
@@ -77,17 +77,15 @@
     "css-loader": "^5.2.1",
     "css-modules-typescript-loader": "4.0.0",
     "error-overlay-webpack-plugin": "0.4.0",
-    "eslint": "6.0.1",
-    "eslint-config-airbnb-base": "13.2.0",
-    "eslint-config-prettier": "6.0.0",
+    "eslint": "^7.24.0",
+    "eslint-config-prettier": "^8.2.0",
     "eslint-import-resolver-babel-module": "5.1.0",
     "eslint-loader": "2.2.1",
     "eslint-plugin-babel": "5.3.0",
-    "eslint-plugin-import": "2.18.0",
+    "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "3.1.0",
     "eslint-plugin-react": "7.14.3",
-    "eslint-plugin-react-hooks": "4.0.2",
-    "eslint-watch": "6.0.0",
+    "eslint-watch": "^7.0.0",
     "exports-loader": "0.7.0",
     "extract-css-chunks-webpack-plugin": "4.5.4",
     "extract-loader": "3.1.0",
@@ -130,7 +128,7 @@
     "ts-jest": "24.1.0",
     "ts-loader": "6.2.1",
     "tsconfig-paths-webpack-plugin": "3.5.1",
-    "typescript": "^4.2.4",
+    "typescript": "4.2.4",
     "uglifyjs-webpack-plugin": "2.1.3",
     "url-loader": "2.0.1",
     "webpack": "4.38.0",
