--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -5,22 +5,14 @@
   "main": "app.js",
   "private": true,
   "scripts": {
-    "clean-build": "rimraf build/*",
+    "clean-build": "rm -rf build/*",
     "test": "jest --watchAll",
     "start": "webpack-dev-server --progress --overlay --config webpack.dev.js",
-    "build": "yarn run clean-build && webpack --mode production --config webpack/prod.babel.js",
+    "build": "yarn run clean-build && webpack --mode production --config webpack.prod.js",
     "lint": "eslint '*/**/*.{ts,tsx}' --quiet --fix"
   },
   "dependencies": {
-    "@fullcalendar/core": "4.4.0",
-    "@fullcalendar/daygrid": "4.4.0",
-    "@fullcalendar/interaction": "4.4.0",
-    "@fullcalendar/react": "4.4.0",
-    "@fullcalendar/timegrid": "4.4.0",
-    "@material-ui/core": "4.9.3",
-    "@material-ui/icons": "4.9.1",
     "@reach/router": "^1.3.4",
-    "core-js": "3.6.4",
     "date-fns": "2.12.0",
     "dotenv": "8.2.0",
     "dotenv-webpack": "1.7.0",
@@ -35,7 +27,6 @@
     "react-router": "5.0.1",
     "react-router-dom": "5.0.1",
     "react-select": "3.0.8",
-    "styled-components": "5.0.0",
     "vanilla-lazyload": "15.1.1",
     "webpack-bundle-analyzer": "4.4.0"
   },
@@ -53,10 +44,12 @@
     "@babel/preset-typescript": "7.3.3",
     "@babel/register": "7.4.4",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
+    "@svgr/webpack": "^5.5.0",
     "@testing-library/jest-dom": "4.2.3",
     "@testing-library/react": "9.1.3",
     "@types/jest": "24.0.23",
     "@types/node": "13.11.0",
+    "@types/reach__router": "^1.3.7",
     "@types/react": "16.9.36",
     "@types/react-dom": "16.9.0",
     "@types/react-router": "5.1.5",
@@ -85,6 +78,7 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "3.1.0",
     "eslint-plugin-react": "7.14.3",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-watch": "^7.0.0",
     "exports-loader": "0.7.0",
     "extract-css-chunks-webpack-plugin": "4.5.4",
