--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -12,7 +12,7 @@
     "lint": "eslint '*/**/*.{ts,tsx}' --quiet --fix"
   },
   "dependencies": {
-    "@reach/router": "^1.3.4",
+    "@reach/router": "1.3.4",
     "date-fns": "2.12.0",
     "dotenv": "8.2.0",
     "dotenv-webpack": "1.7.0",
@@ -43,21 +43,21 @@
     "@babel/preset-react": "7.6.3",
     "@babel/preset-typescript": "7.3.3",
     "@babel/register": "7.4.4",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
-    "@svgr/webpack": "^5.5.0",
+    "@pmmmwh/react-refresh-webpack-plugin": "0.4.3",
+    "@svgr/webpack": "5.5.0",
     "@testing-library/jest-dom": "4.2.3",
     "@testing-library/react": "9.1.3",
     "@types/jest": "24.0.23",
     "@types/node": "13.11.0",
-    "@types/reach__router": "^1.3.7",
+    "@types/reach__router": "1.3.7",
     "@types/react": "16.9.36",
     "@types/react-dom": "16.9.0",
     "@types/react-router": "5.1.5",
     "@types/styled-components": "4.4.2",
     "@types/webpack": "4.39.5",
     "@types/webpack-env": "1.15.1",
-    "@typescript-eslint/eslint-plugin": "^4.22.0",
-    "@typescript-eslint/parser": "^4.22.0",
+    "@typescript-eslint/eslint-plugin": "4.22.0",
+    "@typescript-eslint/parser": "4.22.0",
     "autoprefixer": "9.7.6",
     "awesome-typescript-loader": "5.2.1",
     "babel-jest": "24.8.0",
@@ -67,19 +67,19 @@
     "clean-webpack-plugin": "3.0.0",
     "compression-webpack-plugin": "3.0.0",
     "copy-webpack-plugin": "5.0.4",
-    "css-loader": "^5.2.1",
+    "css-loader": "5.2.1",
     "css-modules-typescript-loader": "4.0.0",
     "error-overlay-webpack-plugin": "0.4.0",
-    "eslint": "^7.24.0",
-    "eslint-config-prettier": "^8.2.0",
+    "eslint": "7.24.0",
+    "eslint-config-prettier": "8.2.0",
     "eslint-import-resolver-babel-module": "5.1.0",
     "eslint-loader": "2.2.1",
     "eslint-plugin-babel": "5.3.0",
-    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-import": "2.22.1",
     "eslint-plugin-prettier": "3.1.0",
     "eslint-plugin-react": "7.14.3",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "eslint-watch": "^7.0.0",
+    "eslint-plugin-react-hooks": "4.2.0",
+    "eslint-watch": "7.0.0",
     "exports-loader": "0.7.0",
     "extract-css-chunks-webpack-plugin": "4.5.4",
     "extract-loader": "3.1.0",
@@ -100,16 +100,16 @@
     "node-sass": "4.12.0",
     "optimize-css-assets-webpack-plugin": "4.0.0",
     "precss": "4.0.0",
-    "prettier": "1.18.2",
-    "react-refresh": "^0.10.0",
+    "prettier": "2.2.1",
+    "react-refresh": "0.10.0",
     "react-test-renderer": "16.8.6",
     "regenerator-runtime": "0.13.3",
-    "sass": "^1.32.8",
+    "sass": "1.32.8",
     "sass-lint": "1.13.1",
-    "sass-loader": "^10.0.1",
+    "sass-loader": "10.0.1",
     "sitemap-webpack-plugin": "0.6.0",
     "source-map-loader": "0.2.4",
-    "style-loader": "^2.0.0",
+    "style-loader": "2.0.0",
     "stylelint": "10.1.0",
     "stylelint-config-prettier": "5.2.0",
     "stylelint-config-recommended": "2.2.0",
