--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -23,6 +23,7 @@
     "react-datepicker": "2.14.1",
     "react-dnd": "10.0.2",
     "react-dom": "16.9.0",
+    "react-hook-form": "7.3.4",
     "react-lazy-load-image-component": "1.4.1",
     "react-router": "5.0.1",
     "react-router-dom": "5.0.1",
@@ -132,12 +133,12 @@
     "webpack-visualizer-plugin": "0.1.11",
     "webpackbar": "3.1.5"
   },
-  "repository": "git+https://github.com/patrick-salvatore/ticket-dash.git",
+  "repository": "git+https://github.com/patrick-salvatore/workout-room.git",
   "keywords": [],
-  "author": "patrick-salvatore <salvatorepat8@gmail.com>",
+  "author": "patrick-salvatore",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/patrick-salvatore/ticket-dash/issues"
   },
-  "homepage": "https://patrick-salvatore.github.io/ticket-dash/"
+  "homepage": "https://patrick-salvatore.github.io/workout-room/"
 }
