--- a/packages/frontend/tsconfig.json
+++ b/packages/frontend/tsconfig.json
@@ -18,7 +18,7 @@
     },
     "target": "es5",
     "declaration": false,
-    "lib": ["es5", "es6", "dom"],
+    "lib": ["es2019", "dom"],
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
