--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -15,21 +15,19 @@
     "@reach/router": "1.3.4",
     "date-fns": "2.12.0",
     "dotenv": "8.2.0",
-    "dotenv-webpack": "1.7.0",
+    "dotenv-webpack": "^7.0.2",
     "es6-object-assign": "1.1.0",
     "fp-ts": "2.10.4",
-    "moment": "2.24.0",
+    "nanoid": "^3.1.22",
     "react": "16.9.0",
     "react-datepicker": "2.14.1",
     "react-dnd": "10.0.2",
     "react-dom": "16.9.0",
     "react-hook-form": "7.3.4",
     "react-lazy-load-image-component": "1.4.1",
-    "react-router": "5.0.1",
-    "react-router-dom": "5.0.1",
     "react-select": "3.0.8",
     "vanilla-lazyload": "15.1.1",
-    "webpack-bundle-analyzer": "4.4.0"
+    "webpack-bundle-analyzer": "^4.4.1"
   },
   "devDependencies": {
     "@babel/core": "7.4.4",
