--- a/package.json
+++ b/package.json
@@ -9,16 +9,16 @@
     "test": "jest --watchAll",
     "dev": "webpack-dev-server --progress --overlay --config webpack.dev.js",
     "build": "yarn run clean-build && webpack --mode production --config webpack.prod.js",
+    "build:dev": "webpack --mode development --config webpack.dev.js",
     "lint": "eslint '*/**/*.{ts,tsx}' --quiet --fix"
   },
   "dependencies": {
     "@reach/router": "1.3.4",
     "date-fns": "2.12.0",
     "dotenv": "8.2.0",
-    "dotenv-webpack": "^7.0.2",
-    "es6-object-assign": "1.1.0",
+    "dotenv-webpack": "7.0.2",
     "fp-ts": "2.10.4",
-    "nanoid": "^3.1.22",
+    "nanoid": "3.1.22",
     "react": "16.9.0",
     "react-datepicker": "2.14.1",
     "react-dnd": "10.0.2",
@@ -26,8 +26,7 @@
     "react-hook-form": "7.3.4",
     "react-lazy-load-image-component": "1.4.1",
     "react-select": "3.0.8",
-    "vanilla-lazyload": "15.1.1",
-    "webpack-bundle-analyzer": "^4.4.1"
+    "vanilla-lazyload": "15.1.1"
   },
   "devDependencies": {
     "@babel/core": "7.14.3",
@@ -65,7 +64,7 @@
     "babel-plugin-styled-components": "1.10.6",
     "clean-webpack-plugin": "3.0.0",
     "compression-webpack-plugin": "3.0.0",
-    "copy-webpack-plugin": "5.0.4",
+    "copy-webpack-plugin": "6.3.2",
     "css-loader": "5.2.1",
     "css-modules-typescript-loader": "4.0.0",
     "error-overlay-webpack-plugin": "0.4.0",
@@ -124,6 +123,7 @@
     "uglifyjs-webpack-plugin": "2.1.3",
     "url-loader": "2.0.1",
     "webpack": "4.38.0",
+    "webpack-bundle-analyzer": "4.4.2",
     "webpack-cli": "3.3.5",
     "webpack-dev-server": "3.7.2",
     "webpack-merge": "5.7.3",
